platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_136.platter
start(){
        piece of num = 2, c=3, x=10, y=5;
        x + c * y
}